--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "butschster/meta-tags": "^2.3",
         "diglactic/laravel-breadcrumbs": "^8.1",
         "doctrine/dbal": "^3.6",
+        "filament/filament": "^2.17",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
