--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@alpinejs/focus": "^3.12.0",
+        "@alpinejs/mask": "^3.12.0",
         "alpinejs": "^3.12.0"
     }
 }
