--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.12",
+        "spatie/laravel-medialibrary": "^10.8",
         "spatie/laravel-permission": "^5.10",
         "spatie/laravel-sluggable": "^3.4"
     },
